  - Setting named prevent_old_units_from_upgrading_past_ability_block
- Can adjust times to generate tourism gold, setting named tourism_time_scale_percent
- Option to put all human players in contact with each other at the start of a hotseat game
  - Setting named introduce_all_human_players_at_start_of_hotseat_game
- Option to show some popup messages as online-multiplayer-style notifications
  - Setting named convert_some_popups_into_online_mp_messages, off by default, see config for which popups are affected
- Option to switch debug mode on or off for games in progress
  - Setting named enable_debug_mode_switch, off by default, see config for how to use in-game
- Fix AI players being able to sacrifice units that don't have the sacrifice special ability set on their type
- Option to tint coast and sea tiles on minimap based on cultural borders
  - Setting named show_territory_colors_on_water_tiles_in_minimap, off by default
- Do not charge maintenance for buildings provided for free by shared wonder effects
- Option to draw small shadows underneath city dots on the minimap to make them more visible
  - Setting named accentuate_cities_on_minimap, off by default because it doesn't quite work properly

* RELEASE 24
- Option to share wonders among human players in hotseat mode, setting named share_wonders_in_hotseat
- AI routine for "caravan units", which are modded units whose purpose is to be disbanded for shields
  - Controlled by config option enable_caravan_unit_ai
- Experimental option to move the game's trade net object to a different location in memory named move_trade_net_object
- Delete any AI units that somehow end up off the map to fix a rare crash, setting named delete_off_map_ai_units
- Fix pathfinder bug (see config for details), setting named patch_premature_truncation_of_found_paths
- Fix crash due to division by zero when cities have zero production, setting named patch_zero_production_crash