@@ -146,6 +146,10 @@ enable_debug_mode_switch = true
 ; to geography mode and back again and (2) the shadows may appear in geography mode.
 accentuate_cities_on_minimap = false
 
+; Makes the minimap twice as large. Possible values are "never", "always", and "high-def". The first two are self-explanatory; if set to "high-def",
+; the minimap's size will be doubled when the game is run at a horizontal resolution of at least 1920 pixels.
+double_minimap_size = high-def
+
 [====================]
 [=== OPTIMIZATION ===]
 [====================]
